# CitraVR

./: .gitmodules  README.md  license.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/android/: .gitignore  build.gradle.kts  cmd.py  gradle.properties
src/android/app/: build.gradle.kts  proguard-rules.pro
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/jni/: CMakeLists.txt  config.cpp  default_ini.h  id_cache.cpp  input_manager.cpp  native.cpp
src/android/app/src/main/jni/vr/: CursorLayer.cpp  CursorLayer.h  GameSurfaceLayer.cpp  GameSurfaceLayer.h  OpenXR.cpp  OpenXR.h  Swapchain.h  XrController.cpp  XrController.h  main_helper.h  vr_main.cpp  vr_settings.cpp  vr_settings.h
src/android/app/src/main/jni/vr/gl/: Egl.cpp  Egl.h
src/android/app/src/main/jni/vr/layers/: CursorLayer.cpp  CursorLayer.h  GameSurfaceLayer.cpp  GameSurfaceLayer.h  PassthroughLayer.cpp  PassthroughLayer.h  RibbonLayer.cpp  RibbonLayer.h  UILayer.cpp  UILayer.h
src/android/app/src/main/jni/vr/utils/: Common.h  JniClassNames.cpp  JniClassNames.h  JniUtils.cpp  JniUtils.h  LogUtils.h  MessageQueue.cpp  MessageQueue.h  SyspropUtils.h  XrMath.h
src/android/app/src/main/res/color/: vr_keyboard_key_text_color.xml  vr_ribbon_button_text_color.xml
src/android/app/src/main/res/drawable/: ic_center_focus_strong.xml  ic_citra.xml  ic_citra_full.xml  ic_rotate_90_degrees_ccw.xml  ic_settings_ethernet.xml  ic_swap_horiz.xml  ic_swap_vert.xml  ic_touch_app.xml  ic_vr_adjust_depth.xml  vr_keyboard_key_background.xml  vr_keyboard_modifier_key_background.xml  vr_menu_background.xml  vr_ribbon_button.xml  vr_ribbon_button_default.xml  vr_ribbon_button_pressed.xml  vr_toggle_background.xml
src/android/app/src/main/res/font/: dancing_script_bold.xml  lato_bold.xml
src/android/app/src/main/res/layout/: fragment_about.xml  fragment_home_settings.xml  list_item_setting.xml  vr_error_window.xml  vr_keyboard.xml  vr_keyboard_123.xml  vr_keyboard_abc.xml  vr_logo.xml  vr_notice_dialog.xml  vr_notice_dialog_fragment.xml  vr_ribbon.xml  vr_ribbon_main_panel.xml  vr_ribbon_position_panel.xml  vr_ribbon_stats_panel.xml  vr_settings.xml  vr_settings_base_settings_item.xml  vr_settings_divider.xml  vr_settings_header.xml  vr_settings_input_binding.xml  vr_settings_slider.xml  vr_settings_subsettings.xml  vr_ui_test.xml
src/android/app/src/main/res/menu/: menu_game_grid.xml  menu_navigation.xml
src/android/app/src/main/res/navigation/: home_navigation.xml
src/android/app/src/main/res/values-de/: arrays.xml  strings.xml
src/android/app/src/main/res/values-es/: arrays.xml  (+1 more)
src/audio_core/: CMakeLists.txt
src/citra/: default_ini.h
src/citra_qt/configuration/: configure_enhancements.ui
src/common/: settings.h
src/common/logging/: backend.cpp  filter.cpp  types.h
src/core/: CMakeLists.txt
src/core/hle/kernel/: shared_page.cpp
src/core/hle/service/hid/: hid.cpp
src/video_core/: rasterizer_accelerated.cpp  rasterizer_accelerated.h  rasterizer_interface.h
src/video_core/renderer_opengl/: gl_rasterizer.cpp  renderer_opengl.cpp
src/video_core/renderer_vulkan/: vk_rasterizer.cpp
src/video_core/shader/generator/: glsl_shader_decompiler.cpp  glsl_shader_gen.cpp  shader_gen.cpp  shader_gen.h  shader_uniforms.h
(+92 files in other folders)
